[gd_scene load_steps=3 format=3]

[ext_resource type="Script" path="res://addons/fart_engine/SaveFile_Manager/DisplaySaveFile.gd" id="1"]
[ext_resource type="Theme" uid="uid://c521sxmdt64pl" path="res://addons/fart_engine/Database_Manager/Theme and Style/main_30.tres" id="1_62w8q"]

[node name="DisplaySaveFile" type="Control" groups=["Database", "Tab"]]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_62w8q")
script = ExtResource("1")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0.145098, 0.145098, 0.145098, 1)

[node name="VBox1" type="VBoxContainer" parent="."]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Hbox2" type="HBoxContainer" parent="VBox1"]
layout_mode = 2

[node name="CenterContainer2" type="CenterContainer" parent="VBox1/Hbox2"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Label" type="Label" parent="VBox1/Hbox2/CenterContainer2"]
visible = false
layout_mode = 2
text = "CHANGES HAVE BEEN MADE BUT NOT SAVED"

[node name="Save" type="Button" parent="VBox1/Hbox2"]
layout_mode = 2
disabled = true
text = "Save Changes"

[node name="DeleteFile" type="Button" parent="VBox1/Hbox2"]
layout_mode = 2
disabled = true
text = "Delete  File"

[node name="HBox3" type="HBoxContainer" parent="VBox1"]
layout_mode = 2

[node name="HBox1" type="HBoxContainer" parent="VBox1"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Scroll1" type="ScrollContainer" parent="VBox1/HBox1"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VBox1" type="VBoxContainer" parent="VBox1/HBox1/Scroll1"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Label" type="Label" parent="VBox1/HBox1/Scroll1/VBox1"]
layout_mode = 2
text = "File Number"

[node name="Scroll2" type="ScrollContainer" parent="VBox1/HBox1"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VBox1" type="VBoxContainer" parent="VBox1/HBox1/Scroll2"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Label" type="Label" parent="VBox1/HBox1/Scroll2/VBox1"]
layout_mode = 2
text = "Table  Name"

[node name="Scroll3" type="ScrollContainer" parent="VBox1/HBox1"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VBox1" type="VBoxContainer" parent="VBox1/HBox1/Scroll3"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Label" type="Label" parent="VBox1/HBox1/Scroll3/VBox1"]
layout_mode = 2
text = "Key Name"

[node name="Scroll4" type="ScrollContainer" parent="VBox1/HBox1"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VBox1" type="VBoxContainer" parent="VBox1/HBox1/Scroll4"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Label" type="Label" parent="VBox1/HBox1/Scroll4/VBox1"]
layout_mode = 2
text = "Fields"

[node name="Popups" type="ColorRect" parent="."]
visible = false
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(1, 1, 1, 0.211765)

[node name="popup_delete_confirm" type="Control" parent="Popups"]
visible = false
anchors_preset = 0
anchor_right = 1.0
anchor_bottom = 1.0

[node name="PanelContainer" type="ColorRect" parent="Popups/popup_delete_confirm"]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0, 0, 0, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="Popups/popup_delete_confirm/PanelContainer"]
layout_mode = 0
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -292.0
offset_top = -114.0
offset_right = 292.0
offset_bottom = 114.0
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_layout_mode = 1

[node name="Label" type="Label" parent="Popups/popup_delete_confirm/PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Are you sure you want to delete File Number %?"
horizontal_alignment = 1

[node name="Label2" type="Label" parent="Popups/popup_delete_confirm/PanelContainer/VBoxContainer"]
visible = false
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Are you sure you want to delete File Number %?"

[node name="HBoxContainer" type="HBoxContainer" parent="Popups/popup_delete_confirm/PanelContainer/VBoxContainer"]
layout_mode = 2

[node name="Accept" type="Button" parent="Popups/popup_delete_confirm/PanelContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Accept"

[node name="Cancel" type="Button" parent="Popups/popup_delete_confirm/PanelContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Cancel"

[connection signal="button_up" from="VBox1/Hbox2/Save" to="." method="_on_Save_button_up"]
[connection signal="button_up" from="VBox1/Hbox2/DeleteFile" to="." method="_on_DeleteFile_button_up"]
[connection signal="button_up" from="VBox1/HBox1/Scroll1/VBox1/1" to="VBox1/HBox1/Scroll1/VBox1/1" method="_on_Navigation_Button_button_up" flags=18]
[connection signal="button_up" from="VBox1/HBox1/Scroll1/VBox1/2" to="VBox1/HBox1/Scroll1/VBox1/2" method="_on_Navigation_Button_button_up" flags=18]
[connection signal="button_up" from="Popups/popup_delete_confirm/PanelContainer/VBoxContainer/HBoxContainer/Accept" to="." method="_on_Delete_Accept_button_up"]
[connection signal="button_up" from="Popups/popup_delete_confirm/PanelContainer/VBoxContainer/HBoxContainer/Cancel" to="." method="_on_Delete_Cancel_button_up"]
